tests/ui/const-generics/transmute-fail.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-fail.rs:7:5
   |
LL |     std::mem::transmute(v)
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[[u32; H+1]; W]` (generic size [const expr])
   = note: target type: `[[u32; W+1]; H]` (generic size [const expr])

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-fail.rs:14:5
   |
LL |     std::mem::transmute(v)
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[[u32; H]; W]` (generic size [const expr])
   = note: target type: `[u32; W * H * H]` (generic size [const expr])

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-fail.rs:21:5
   |
LL |     std::mem::transmute(v)
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[[[u32; 8888888]; 9999999]; 777777777]` (values of the type `[[[u32; 8888888]; 9999999]; 777777777]` are too big for the current architecture)
   = note: target type: `[[[u32; 9999999]; 777777777]; 8888888]` (values of the type `[[[u32; 9999999]; 777777777]; 8888888]` are too big for the current architecture)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0512`.
